# career-copilot

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/core/: config.py
app/models/: schemas.py
app/routes/: resume.py
app/services/: bullet_generator.py  docx_generator.py  gap_analyzer.py  github_service.py  jd_parser.py  pdf_generator.py  pdf_generator_latex.py  project_generator.py
app/templates/: resume.html
app/utils/: logger.py  promt_template.py
