[project]
name = "career-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "langchain>=1.2.15",
    "langchain-core>=1.2.28",
    "langchain-openai>=1.1.12",
    "pdfkit>=1.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pylatex>=1.4.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.44.0",
]
